solutions cards(homepage) - fixed alignment of content on all rez.

--- a/pages/home.css
+++ b/pages/home.css
@@ -10,9 +10,7 @@
   padding: 2em 1em;
   font-weight: 100;
   text-align: center;
-
   position: relative;
-
   -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
   box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
@@ -20,10 +18,9 @@
 
 :local(.linkContainer) {
   width: 100%;
+  display: block;
   position: absolute;
   bottom: 2em;
-
-  
 }
 
 :local(.card) a {
@@ -37,10 +34,10 @@
   line-height: 30px;
   text-decoration: none;
   padding: 0em 1em 0em 1em;
-  transition: background-color .3s;
-  -ms-transition: background-color .3s;
-  -o-transition: background-color .3s;
-  -moz-transition: background-color .3s;
+  transition: background-color .2s;
+  -ms-transition: background-color .2s;
+  -o-transition: background-color .2s;
+  -moz-transition: background-color .2s;
 }
 
 :local(.card) h2 {
@@ -50,7 +47,6 @@
   margin-bottom: 0.5em;
 }
 
-
 :local(.card) p {
   /*padding: 0 1em 1em 1em;*/
   /*margin-bottom: 2em;*/
@@ -59,9 +55,7 @@
   font-size: 120%;
   display: block;
   min-height: 8em;
-
 }
-
 
 /*
  * Solutions
@@ -81,10 +75,19 @@
 
 :local(.solutionCard) {
   background-color: #fff;
+  display: flex;
+  flex-direction:column;
+  align-self: center;
+}
+:local(.solutionCard) h2 {
+  font-size: 180%;
+  margin-top:0;
 }
 
 :local(.solutionCard) img {
   width: 80%;
+  margin: 0 auto;
+  padding-bottom: 1em;
 }
 
 :local(.solutionCard) a {
@@ -94,10 +97,10 @@
 :local(.solutionCard) a:hover {
   background-color: #E48E3A;
   color: #fff;
-  transition: background-color .3s;
-  -ms-transition: background-color .3s;
-  -o-transition: background-color .3s;
-  -moz-transition: background-color .3s;
+  transition: background-color .2s;
+  -ms-transition: background-color .2s;
+  -o-transition: background-color .2s;
+  -moz-transition: background-color .2s;
 }
 
 /*
@@ -189,4 +192,7 @@
 :local(.pilotImgContainer) img {
   display: flex;
   align-items: center;
+}
+:local(.spacerCard) {
+  height: 1em;
 }
